feat(admin): instance config
