# src/models/admin_instance-config.ts
@@ -1,0 +1,8 @@
+export interface AdminInstanceConfig {
+    key: string,
+    value: string | null
+}
+
+export interface AdminInstanceConfigResponse {
+    config: AdminInstanceConfig[]
+}
