# src/swagger/swagger.json
@@ -17,6 +17,9 @@
           "description": {
             "type": "string"
           },
+          "persistent": {
+            "type": "boolean"
+          },
           "id": {
             "type": "number",
             "format": "double"
@@ -31,6 +34,7 @@
           "title",
           "picture",
           "description",
+          "persistent",
           "id",
           "year"
         ],
@@ -52,7 +56,7 @@
         "type": "object",
         "additionalProperties": false
       },
-      "AchievementCreation": {
+      "AchievementBase": {
         "properties": {
           "title": {
             "type": "string"
@@ -75,6 +79,9 @@
         ],
         "type": "object",
         "additionalProperties": false
+      },
+      "AchievementCreation": {
+        "$ref": "#/components/schemas/AchievementBase"
       },
       "AchievementCreationRequest": {
         "properties": {
@@ -961,6 +968,38 @@
         "required": [
           "execs",
           "meta"
+        ],
+        "type": "object",
+        "additionalProperties": false
+      },
+      "AdminInstanceConfig": {
+        "properties": {
+          "key": {
+            "type": "string"
+          },
+          "value": {
+            "type": "string",
+            "nullable": true
+          }
+        },
+        "required": [
+          "key",
+          "value"
+        ],
+        "type": "object",
+        "additionalProperties": false
+      },
+      "AdminInstanceConfigResponse": {
+        "properties": {
+          "config": {
+            "items": {
+              "$ref": "#/components/schemas/AdminInstanceConfig"
+            },
+            "type": "array"
+          }
+        },
+        "required": [
+          "config"
         ],
         "type": "object",
         "additionalProperties": false
@@ -4377,6 +4416,60 @@
             }
           }
         ]
+      }
+    },
+    "/admin/instanceConfig": {
+      "get": {
+        "operationId": "InstanceConfigGetAll",
+        "responses": {
+          "200": {
+            "description": "Ok",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/AdminInstanceConfigResponse"
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "ksi": []
+          }
+        ],
+        "parameters": []
+      },
+      "post": {
+        "operationId": "InstanceConfigSetSingle",
+        "responses": {
+          "200": {
+            "description": "Ok",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "ksi": []
+          }
+        ],
+        "parameters": [],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/AdminInstanceConfig"
+              }
+            }
+          }
+        }
       }
     },
     "/admin/atasks": {
